# GenFilesMCP

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  server.py
.github/: dependabot.yml
.github/workflows/: docker-build.yml  security-scan.yml  upstream-sync.yml
docs/: features.md  installation.md  usage.md
example/: Gradient_Descent_EN.docx  systemprompt.md
src/: excel.md  markdown.md  mcp_instructions.md  pdf.md  powerpoint.md  word.md  word_template.md
tools/: docx_tool.py  excel_tool.py  markdown_tool.py  pdf_tool.py  powerpoint_tool.py
utils/: argument_descriptions.py  document_builder.py  get_user_id.py  knowledge.py  load_md_templates.py  pydantic_models_endpoints.py  rich_ui_download.py  upload_file.py
