[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GenFilesMCP"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=3.2.0",
    "ipykernel>=7.2.0",
    "math2docx>=2.0.3",
    "mcp[cli]>=1.25.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "pypandoc>=1.15",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "requests>=2.33.0",
    "uvicorn>=0.40.0",
    # Transitive dependency overrides for CVE fixes
    "cryptography>=46.0.7",
    "tornado>=6.5.5",
    "python-multipart>=0.0.27",
    "lxml>=6.1.0",
    "pygments>=2.20.0",
    "pyjwt>=2.12.0",
    "authlib>=1.6.9",
]

[project.scripts]
genfilesmcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
include = ["src", "tools", "utils"]

[tool.setuptools.package-data]
src = ["*.md"]
